(library
 (public_name aoc2015)
 (libraries angstrom cmdliner_let_syntax digestif ocamlgraph str yojson)
 (flags :standard -open Base -open Stdio)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(subdir
 run
 (dynamic_include ../generate/dune.inc))

(subdir
 generate
 (rule
  (with-stdout-to
   dune.inc
   (run ../gen/gen.exe 12))))
