(library
 (name day02)
 (modules day02 input)
 (public_name aoc2015.day02)
 (libraries lib)
 (preprocess
  (pps ppx_jane))
 (inline_tests))

(executable
 (name run)
 (modules run)
 (libraries day02))

(rule
 (action
  (write-file run.ml "let () = Day02.run ()")))

(rule
 (action
  (with-stdout-to
   p1.txt.gen
   (run ./run.exe --part 1))))

(rule
 (alias runtest)
 (action
  (diff p1.txt p1.txt.gen)))

(rule
 (action
  (with-stdout-to
   p2.txt.gen
   (run ./run.exe --part 2))))

(rule
 (alias runtest)
 (action
  (diff p2.txt p2.txt.gen)))
