(library
 (name day03)
 (modules day03 input)
 (public_name aoc2015.day03)
 (libraries lib)
 (preprocess
  (pps ppx_jane))
 (inline_tests))

(executable
 (name run)
 (modules run)
 (libraries day03))

(rule
 (action
  (write-file run.ml "let () = Day03.run ()")))

(rule
 (action
  (with-stdout-to
   p1.txt.gen
   (run ./run.exe --part 1))))

(rule
 (alias runtest)
 (action
  (diff p1.txt p1.txt.gen)))

(rule
 (action
  (with-stdout-to
   p2.txt.gen
   (run ./run.exe --part 2))))

(rule
 (alias runtest)
 (action
  (diff p2.txt p2.txt.gen)))
